[package]
name = "cykv"
version = "0.1.0"
authors = ["yah01 <kagaminehuan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.1.0"
failure = "0.1.8"
lru = "0.6.2"
serde = "1.0.118"
serde_json = "1.0.60"
tempfile = "3.1.0"
walkdir = "2.3.1"
